--- a/sb_task/Cargo.toml
+++ b/sb_task/Cargo.toml
@@ -12,3 +12,4 @@ serde = { version = "1.0.214", features = ["derive"] }
 serde_json = "1.0.132"
 axum = { version = "0.7.7", features = ["multipart", "http2"] }
 validator = { version = "0.18.1", features = ["derive"] }
+strum = { version = "0.26.3", features = ["derive"] }
