--- a/sb_middleware/Cargo.toml
+++ b/sb_middleware/Cargo.toml
@@ -21,3 +21,4 @@ tower = "0.5.1"
 validator = { version = "0.18.1", features = ["derive"] }
 strum = { version = "0.26.3", features = ["derive"] }
 tokio = "1.40.0"
+tower-http = { version = "0.6.1", features = ["fs"] }
