--- a/sb_wallet/Cargo.toml
+++ b/sb_wallet/Cargo.toml
@@ -17,3 +17,5 @@ axum_typed_multipart = "0.13.0"
 tempfile = "3.13.0"
 tower-http = { version = "0.6.1", features = ["fs"] }
 tower = "0.5.1"
+tokio = "1.40.0"
+tokio-stream = "0.1.16"
