--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,6 @@
 START_PASSWORD=12334
 DEVELOPMENT=true
-STRIPE_SECRET_KEY=...
-STRIPE_WEBHOOK_SECRET=...
-BACKBLAZE_APP_ID=...
-BACKBLAZE_APP_KEY=...
+STRIPE_SECRET_KEY=sk_test_123
+STRIPE_WEBHOOK_SECRET=whsec_123
+JWT_SECRET=some123
 UPLOADS_DIRECTORY=uploads
