--- a/sb_wallet/Cargo.toml
+++ b/sb_wallet/Cargo.toml
@@ -19,3 +19,5 @@ tower-http = { version = "0.6.1", features = ["fs"] }
 tower = "0.5.1"
 tokio = "1.40.0"
 tokio-stream = "0.1.16"
+log = "0.4.22"
+once_cell = "1.20.2"
