wallet history view

--- a/sb_wallet/Cargo.toml
+++ b/sb_wallet/Cargo.toml
@@ -20,4 +20,6 @@ tower = "0.5.1"
 tokio = "1.40.0"
 tokio-stream = "0.1.16"
 log = "0.4.22"
-once_cell = "1.20.2"
+once_cell = "1.21.0"
+askama_axum = { git = "https://github.com/djc/askama.git", branch = "main" }
+askama = { git = "https://github.com/djc/askama.git", branch = "main", features = ["serde-json"] }
