--- a/sb_wallet/Cargo.toml
+++ b/sb_wallet/Cargo.toml
@@ -20,6 +20,7 @@ tower = "0.5.1"
 tokio = "1.40.0"
 tokio-stream = "0.1.16"
 log = "0.4.22"
+async-stripe = { version = "0.39.1", features = ["checkout", "runtime-tokio-hyper"] }
 once_cell = "1.21.0"
 askama_axum = { git = "https://github.com/djc/askama.git", branch = "main" }
 askama = { git = "https://github.com/djc/askama.git", branch = "main", features = ["serde-json"] }
