--- a/sb_task/Cargo.toml
+++ b/sb_task/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 sb_community={path = "../sb_community"}
 sb_middleware={path = "../sb_middleware"}
 sb_user_auth={path = "../sb_user_auth"}
+sb_wallet={path = "../sb_wallet"}
 surrealdb = "2.2.1"
 serde = { version = "1.0.214", features = ["derive"] }
 serde_json = "1.0.132"
@@ -19,3 +20,4 @@ tower-http = { version = "0.6.1", features = ["fs"] }
 tower = "0.5.1"
 askama_axum = { git = "https://github.com/djc/askama.git", branch = "main" }
 askama = { git = "https://github.com/djc/askama.git", branch = "main", features = ["serde-json"] }
+chrono = "0.4.40"
