--- a/server_main/Cargo.toml
+++ b/server_main/Cargo.toml
@@ -34,7 +34,7 @@ futures = "0.3.30"
 tokio-stream = "0.1.16"
 strum = { version = "0.26.3", features = ["derive"] }
 rand = "0.8.5"
-async-stripe = { version = "0.40.1", features = ["checkout", "runtime-tokio-hyper"] }
+#async-stripe = { version = "0.40.1", features = ["checkout", "runtime-tokio-hyper"] }
 surrealdb =  { version = "2.2.1", features = ["kv-mem"] }
 tokio-util = { version = "0.7.12", features = ["io", "futures-io"] }
 axum_typed_multipart = "0.13.0"
