--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 START_PASSWORD=12334
 DEVELOPMENT=true
 STRIPE_SECRET_KEY=sk_test_123
+STRIPE_PLATFORM_ACCOUNT=stripePlatformAccount
 STRIPE_WEBHOOK_SECRET=whsec_123
 JWT_SECRET=some123
 UPLOADS_DIRECTORY=uploads
