--- a/sb_wallet/Cargo.toml
+++ b/sb_wallet/Cargo.toml
@@ -19,3 +19,4 @@ once_cell = "1.21.0"
 askama_axum = { git = "https://github.com/djc/askama.git", branch = "main" }
 askama = { git = "https://github.com/djc/askama.git", branch = "main", features = ["serde-json"] }
 chrono = "0.4.40"
+futures = "0.3.31"
