--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,4 @@ STRIPE_PLATFORM_ACCOUNT=stripePlatformAccount
 STRIPE_WEBHOOK_SECRET=whsec_123
 JWT_SECRET=some123
 UPLOADS_DIRECTORY=uploads
+UPLOAD_MAX_SIZE_MB=15
