--- a/server_main/Cargo.toml
+++ b/server_main/Cargo.toml
@@ -9,7 +9,7 @@ axum = { version = "0.7.7", features = ["multipart", "http2"] }
 jsonwebtoken = "9.3.0"
 serde = { version = "1.0.210", features = ["derive"] }
 serde_json = "1.0.128"
-tokio = { version = "1.40.0", features = ["full", "io-util"] }
+tokio = { version = "1.40.0", features = ["full", "io-util", "macros", "rt-multi-thread"] }
 log = "0.4.22"
 uuid = { version = "1.10.0", features = ["v4"] }
 once_cell = "1.19.0"
