--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,8 @@ STRIPE_WEBHOOK_SECRET=whsec_123
 JWT_SECRET=some123
 UPLOADS_DIRECTORY=uploads
 UPLOAD_MAX_SIZE_MB=15
+DB_URL=some_url
+DB_NAMESPACE=namespace
+DB_DATABASE=database
+DB_USERNAME=username
+DB_PASSWORD=password
