fix: ensure optional DB config variables are clearly marked

--- a/.env.example
+++ b/.env.example
@@ -6,8 +6,8 @@ STRIPE_WEBHOOK_SECRET=whsec_123
 JWT_SECRET=some123
 UPLOADS_DIRECTORY=uploads
 UPLOAD_MAX_SIZE_MB=15
-DB_URL=some_url
-DB_NAMESPACE=namespace
-DB_DATABASE=database
-DB_USERNAME=username
-DB_PASSWORD=password
+DB_URL=some_url           # optional 
+DB_NAMESPACE=namespace    # optional
+DB_DATABASE=database      # optional
+DB_USERNAME=username      # optional 
+DB_PASSWORD=password      # optional
