db based on .env value (#21)
* db based on .env value

* fix: ensure optional DB config variables are clearly marked

* fix typo

* fix: parse DB_DATABASE from env

* feat: omit mem db signin if env DB_PASSWORD, DB_USERNAME exist

* chore: cleanup

* use const

* use const

---------

Co-authored-by: mac02 <matjazonline@gmail.com>

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,8 @@ STRIPE_WEBHOOK_SECRET=whsec_123
 JWT_SECRET=some123
 UPLOADS_DIRECTORY=uploads
 UPLOAD_MAX_SIZE_MB=15
+DB_URL=some_url           # optional - using mem db if empty
+DB_NAMESPACE=namespace    # optional
+DB_DATABASE=database      # optional
+DB_USERNAME=username      # optional - required if not mem db
+DB_PASSWORD=password      # optional - required if not mem db
