fix db (re)connect issue when running all tests with 'cargo test'

--- a/server_main/Cargo.toml
+++ b/server_main/Cargo.toml
@@ -47,3 +47,7 @@ sb_middleware = { path = "../sb_middleware" }
 sb_user_auth = { path = "../sb_user_auth" }
 sb_task = { path = "../sb_task" }
 sb_wallet = { path = "../sb_wallet" }
+
+
+[dev-dependencies]
+serial_test = "*"
