when following user add 3 latest posts to user stream

--- a/server_main/Cargo.toml
+++ b/server_main/Cargo.toml
@@ -52,3 +52,6 @@ sb_middleware = { path = "../sb_middleware" }
 sb_user_auth = { path = "../sb_user_auth" }
 sb_task = { path = "../sb_task" }
 sb_wallet = { path = "../sb_wallet" }
+
+[dev-dependencies]
+fake = "4.3.0"
