--- a/sb_community/Cargo.toml
+++ b/sb_community/Cargo.toml
@@ -19,12 +19,16 @@ blake2 = "0.10.6"
 tower-http = { version = "0.6.1", features = ["fs"] }
 tower-sessions = "0.13.0"
 tower = { version = "0.5.1" }
-webauthn-rs = { version = "0.5.0", features = ["danger-allow-state-serialisation"] }
+webauthn-rs = { version = "0.5.0", features = [
+    "danger-allow-state-serialisation",
+] }
 thiserror = "1.0.63"
 base64 = "0.22.1"
 axum-test = "16.1.0"
 askama_axum = { git = "https://github.com/djc/askama.git", branch = "main" }
-askama = { git = "https://github.com/djc/askama.git", branch = "main", features = ["serde-json"] }
+askama = { git = "https://github.com/djc/askama.git", branch = "main", features = [
+    "serde-json",
+] }
 dotenv = "0.15.0"
 axum-htmx = { version = "0.6.0", features = ["auto-vary"] }
 validator = { version = "0.18.1", features = ["derive"] }
@@ -34,7 +38,10 @@ futures = "0.3.30"
 tokio-stream = "0.1.16"
 strum = { version = "0.26.3", features = ["derive"] }
 rand = "0.8.5"
-async-stripe = { version = "0.41.0", features = ["checkout", "runtime-tokio-hyper"] }
+async-stripe = { version = "0.41.0", features = [
+    "checkout",
+    "runtime-tokio-hyper",
+] }
 surrealdb = { version = "2.2.1", features = ["kv-mem"] }
 tokio-util = { version = "0.7.12", features = ["io", "futures-io"] }
 axum_typed_multipart = "0.13.0"
