--- a/sb_user_auth/Cargo.toml
+++ b/sb_user_auth/Cargo.toml
@@ -4,16 +4,18 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-axum = { version = "0.7.7", features = ["multipart", "http2" ] }
-sb_middleware={path = "../sb_middleware"}
+axum = { version = "0.7.7", features = ["multipart", "http2"] }
+sb_middleware = { path = "../sb_middleware" }
 serde = { version = "1.0.210", features = ["derive"] }
 serde_json = "1.0.128"
 tokio = { version = "1.40.0", features = ["full", "io-util"] }
 tower-cookies = "0.10.0"
 tower-http = { version = "0.6.1", features = ["fs"] }
-webauthn-rs = { version="0.5.0", features=["danger-allow-state-serialisation"]}
+webauthn-rs = { version = "0.5.0", features = [
+    "danger-allow-state-serialisation",
+] }
 tower-sessions = "0.13.0"
-tower = { version = "0.5.1"}
+tower = { version = "0.5.1" }
 rand = "0.8.5"
 validator = { version = "0.18.1", features = ["derive"] }
 base64 = "0.22.1"
