make test for using larger file (7MB) when creating post

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,6 +47,8 @@ async-stripe = { version = "0.41.0", features = [
     "runtime-tokio-hyper",
 ] }
 
+[dev-dependencies]
+fake = "4.3.0"
 
 [profile.release]
 opt-level = 3
