--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ once_cell = "1.19.0"
 tower-cookies = "0.10.0"
 chrono = { version = "0.4.38", features = ["serde"] }
 blake2 = "0.10.6"
-tower-http = { version = "0.6.1", features = ["fs"] }
+tower-http = { version = "0.6.1", features = ["fs", "trace"] }
 tower-sessions = "0.13.0"
 tower = { version = "0.5.1" }
 webauthn-rs = { version = "0.5.0", features = [
@@ -46,6 +46,8 @@ async-stripe = { version = "0.41.0", features = [
     "checkout",
     "runtime-tokio-hyper",
 ] }
+tracing-subscriber = { version = "0.3.19", features = ["json"] }
+tracing = "0.1.41"
 
 [dev-dependencies]
 fake = "4.3.0"
