--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,7 @@ STRIPE_WEBHOOK_SECRET=whsec_123
 JWT_SECRET=some123
 UPLOADS_DIRECTORY=uploads
 UPLOAD_MAX_SIZE_MB=15
+MOBILE_CLIENT_ID=com.example.com
 # optional - using mem db if empty
 DB_URL=some_url
 # optional
