--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,7 +37,7 @@ tokio-stream = "0.1.16"
 strum = { version = "0.26.3", features = ["derive"] }
 rand = "0.8.5"
 #async-stripe = { version = "0.40.1", features = ["checkout", "runtime-tokio-hyper"] }
-reqwest = "0.12.15"
+reqwest = { version = "0.12.15", features = ["json"] }
 surrealdb = { version = "2.2.1", features = ["kv-mem"] }
 tokio-util = { version = "0.7.12", features = ["io", "futures-io"] }
 axum_typed_multipart = "0.13.0"
