--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,7 @@ DB_DATABASE=database
 DB_USERNAME=username
 # optional - required if not mem db
 DB_PASSWORD=password
+
+GOOGLE_CLOUD_STORAGE_PROJECT_ID=fake-project #optional, only needed if using Google Cloud Storage
+GOOGLE_CLOUD_STORAGE_BUCKET=darvens
+GOOGLE_CLOUD_STORAGE_ENDPOINT=http://localhost:4443 # only for local testing
