--- a/.env.example
+++ b/.env.example
@@ -19,6 +19,6 @@ DB_USERNAME=username
 # optional - required if not mem db
 DB_PASSWORD=password
 
-GOOGLE_CLOUD_STORAGE_PROJECT_ID=fake-project #optional, only needed if using Google Cloud Storage
 GOOGLE_CLOUD_STORAGE_BUCKET=darvens
 GOOGLE_CLOUD_STORAGE_ENDPOINT=http://localhost:4443 # only for local testing
+GOOGLE_CLOUD_STORAGE_CREDENTIALS=file_path_to_credentials
