Implement email verification feature with SendGrid integration and user service updates

--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,5 @@ DB_DATABASE=database
 DB_USERNAME=username
 # optional - required if not mem db
 DB_PASSWORD=password
+SENDGRID_API_KEY=some_key
+NO_REPLY_EMAIL=no-reply@domain.com
