Add email verification functionality with configurable code expiration time

--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,4 @@ DB_USERNAME=username
 DB_PASSWORD=password
 SENDGRID_API_KEY=some_key
 NO_REPLY_EMAIL=no-reply@domain.com
+EMAIL_CODE_TIME_TO_LIVE=10 # minutes of email code time to live - default 10 minutes 
