Implement email verification feature with SendGrid integration and us… (#41)
* Implement email verification feature with SendGrid integration and user service updates

* Add email verification functionality with configurable code expiration time

* Add email verification templates and update UserService to send verification emails

* On average, expect .to_string() to be 100% to 200% slower than .render().

* Implement email verification updates: add email field to EmailVerification struct, refactor email verification routes, and adjust UserService methods for email handling.

* Update README.md to enhance development instructions and usage guidelines

* feat: limited failed code attempts

---------

Co-authored-by: Matjaz Hirschman <matjazonline@gmail.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       - -data
       - /data
     volumes:
-      - ./fake-gcs-data:/data
+      - ~/darve/fake-gcs-data:/data
 
   surrealdb:
     image: surrealdb/surrealdb:latest
@@ -26,4 +26,12 @@ services:
       - SURREAL_USER=${DB_USERNAME}
       - SURREAL_PASS=${DB_PASSWORD}
     volumes:
-      - ./surrealdb_data:/data
+      - ~/darve/surrealdb_data:/data
+
+  sendgrid:
+    image: ghashange/sendgrid-mock:1.12.0
+    container_name: sendgrid
+    ports:
+      - "3000:3000"
+    environment:
+      - API_KEY=${SENDGRID_API_KEY}
