--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,6 +44,7 @@ tracing-subscriber = { version = "0.3.19", features = ["json"] }
 tracing = "0.1.41"
 google-cloud-storage = "0.24.0"
 async-trait = "0.1.88"
+argon2 = "0.5.3"
 
 [dev-dependencies]
 fake = "4.3.0"
