--- a/.env.example
+++ b/.env.example
@@ -23,3 +23,4 @@ EMAIL_CODE_TIME_TO_LIVE=5 # minutes of email code time to live - default 5 minut
 GOOGLE_CLOUD_STORAGE_BUCKET=darvens
 GOOGLE_CLOUD_STORAGE_ENDPOINT=http://localhost:4443 # only for local testing
 GOOGLE_CLOUD_STORAGE_CREDENTIALS=file_path_to_credentials
+SENTRY_PROJECT_LINK=some_link
