replace dotenv with https://crates.io/crates/dotenvy (#56)
* replace dotenv with https://crates.io/crates/dotenvy

* refactor: improve error messages in database connection handling

* chore: remove unnecessary comment about mem db in .env.example

* add dotenvypackage

* add sentry (#57)

--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,6 @@ UPLOADS_DIRECTORY=uploads
 UPLOAD_MAX_SIZE_MB=15
 APPLE_MOBILE_CLIENT_ID=com.example.com
 GOOGLE_CLIENT_ID=client_id
-# optional - using mem db if empty
 DB_URL=some_url
 # optional
 DB_NAMESPACE=namespace
@@ -24,3 +23,4 @@ EMAIL_CODE_TIME_TO_LIVE=5 # minutes of email code time to live - default 5 minut
 GOOGLE_CLOUD_STORAGE_BUCKET=darvens
 GOOGLE_CLOUD_STORAGE_ENDPOINT=http://localhost:4443 # only for local testing
 GOOGLE_CLOUD_STORAGE_CREDENTIALS=file_path_to_credentials
+SENTRY_PROJECT_LINK=some_link
