--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,6 @@ base64 = "0.22.1"
 axum-test = "16.1.0"
 askama_axum = { git = "https://github.com/djc/askama.git", branch = "main" }
 askama = { git = "https://github.com/djc/askama.git", branch = "main" }
-dotenv = "0.15.0"
 axum-htmx = { version = "0.6.0", features = ["auto-vary"] }
 validator = { version = "0.18.1", features = ["derive"] }
 regex = "1.10.6"
@@ -44,6 +43,13 @@ tracing-subscriber = { version = "0.3.19", features = ["json"] }
 tracing = "0.1.41"
 google-cloud-storage = "0.24.0"
 async-trait = "0.1.88"
+dotenvy = "0.15.7"
+sentry = { version = "0.39.0", default-features = false, features = [
+    "curl",
+    "backtrace",
+    "contexts",
+    "panic",
+] }
 argon2 = "0.5.3"
 
 [dev-dependencies]
