fix: install jq

--- a/Dockerfile.staging
+++ b/Dockerfile.staging
@@ -30,6 +30,7 @@ RUN chmod +x /usr/local/bin/init_test_data.sh
 
 COPY ./scripts/staging_entrypoint.sh /usr/local/bin/staging_entrypoint.sh
 RUN apt-get install -y netcat-traditional
+RUN apt-get install -y jq
 RUN chmod +x /usr/local/bin/staging_entrypoint.sh
 
 # Service must listen to $PORT environment variable.
