--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,7 +31,7 @@ tokio-stream = { version = "0.1.16", features = ["sync"] }
 strum = { version = "0.26.3", features = ["derive"] }
 rand = "0.8.5"
 reqwest = { version = "0.12.15", features = ["json"] }
-surrealdb = { version = "2.2.1", features = ["kv-mem"] }
+surrealdb = { version = "2.3.3", features = ["kv-mem"] }
 tokio-util = { version = "0.7.12", features = ["io", "futures-io"] }
 axum_typed_multipart = "0.13.0"
 tempfile = "3.13.0"
@@ -54,6 +54,7 @@ argon2 = "0.5.3"
 
 [dev-dependencies]
 fake = "4.3.0"
+serial_test = "3.2.0"
 
 [profile.release]
 opt-level = 3
