add paypal env to env example file

--- a/.env.example
+++ b/.env.example
@@ -24,3 +24,6 @@ GOOGLE_CLOUD_STORAGE_BUCKET=darvens
 GOOGLE_CLOUD_STORAGE_ENDPOINT=http://localhost:4443 # only for local testing
 GOOGLE_CLOUD_STORAGE_CREDENTIALS=file_path_to_credentials
 SENTRY_PROJECT_LINK=some_link
+PAYPAL_CLIENT_ID=paypal_client_id
+PAYPAL_CLIENT_KEY=paypal_cleint_key
+PAYPAL_WEBHOOK_ID=paypal_webhook_id
