--- a/.env.example
+++ b/.env.example
@@ -4,18 +4,14 @@ STRIPE_SECRET_KEY=sk_test_123
 STRIPE_PLATFORM_ACCOUNT=stripePlatformAccount
 STRIPE_WEBHOOK_SECRET=whsec_123
 JWT_SECRET=some123
-UPLOADS_DIRECTORY=uploads
 UPLOAD_MAX_SIZE_MB=15
-APPLE_MOBILE_CLIENT_ID=com.example.com
-GOOGLE_CLIENT_ID=client_id
-DB_URL=some_url
-# optional
-DB_NAMESPACE=namespace
-# optional
-DB_DATABASE=database
-# optional - required if not mem db
-DB_USERNAME=username
-# optional - required if not mem db
+APPLE_MOBILE_CLIENT_ID=ios_bundle_id
+GOOGLE_ANDROID_CLIENT_ID=google_andoird_client_id
+GOOGLE_IOS_CLIENT_ID=google_ios_client_id
+DB_URL=some_url #optional
+DB_NAMESPACE=namespace #optional
+DB_DATABASE=database #optional - required if not mem db
+DB_USERNAME=username #optional - required if not mem db
 DB_PASSWORD=password
 SENDGRID_API_KEY=some_key
 NO_REPLY_EMAIL=no-reply@domain.com
