--- a/.env.example
+++ b/.env.example
@@ -8,11 +8,11 @@ UPLOAD_MAX_SIZE_MB=15
 APPLE_MOBILE_CLIENT_ID=ios_bundle_id
 GOOGLE_ANDROID_CLIENT_ID=google_andoird_client_id
 GOOGLE_IOS_CLIENT_ID=google_ios_client_id
-DB_URL=some_url #optional
+DB_URL=some_url
 DB_NAMESPACE=namespace #optional
-DB_DATABASE=database #optional - required if not mem db
+DB_DATABASE=database #optional
 DB_USERNAME=username #optional - required if not mem db
-DB_PASSWORD=password
+DB_PASSWORD=password #optional - required if not mem db
 SENDGRID_API_KEY=some_key
 NO_REPLY_EMAIL=no-reply@domain.com
 EMAIL_CODE_TIME_TO_LIVE=5 # minutes of email code time to live - default 5 minutes
