--- a/.github/workflows/api-tests.yml
+++ b/.github/workflows/api-tests.yml
@@ -9,4 +9,5 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - run: mv .env.test .env
+      - uses: actions-rust-lang/setup-rust-toolchain@v1
       - run: just test
