--- a/.github/workflows/api-tests.yml
+++ b/.github/workflows/api-tests.yml
@@ -10,4 +10,5 @@ jobs:
       - uses: actions/checkout@v4
       - run: mv .env.test .env
       - uses: actions-rust-lang/setup-rust-toolchain@v1
+      - run: curl -sSL https://just.systems/install.sh | bash -s -- --to /usr/local/bin
       - run: just test
