fix: update DB_URL to use surrealdb service in .env.test and remove version from docker-compose.yml

--- a/.env.test
+++ b/.env.test
@@ -12,7 +12,7 @@ DB_NAMESPACE=test
 DB_USERNAME=test
 DB_PASSWORD=test
 DB_DATABASE=test    
-DB_URL=ws://127.0.0.1:8000
+DB_URL=ws://surrealdb:8000
 GOOGLE_CLOUD_STORAGE_BUCKET=media
 GOOGLE_CLOUD_STORAGE_ENDPOINT=http://localhost:4443
 SENDGRID_API_KEY=some_key
