--- a/.github/workflows/api-tests.yml
+++ b/.github/workflows/api-tests.yml
@@ -3,12 +3,47 @@ on:
   pull_request:
     branches:
       - main
+
+env:
+  DEVELOPMENT: true
+  STRIPE_SECRET_KEY: dummy_id
+  STRIPE_PLATFORM_ACCOUNT: dummy_id
+  STRIPE_WEBHOOK_SECRET: dummy_id
+  JWT_SECRET: some123
+  APPLE_MOBILE_CLIENT_ID: some_app
+  GOOGLE_ANDROID_CLIENT_ID: dummy_id
+  GOOGLE_IOS_CLIENT_ID: dummy_id
+  UPLOAD_MAX_SIZE_MB: 15
+  DB_NAMESPACE: test
+  DB_DATABASE: test
+  DB_URL: ws://localhost:8000
+  GOOGLE_CLOUD_STORAGE_BUCKET: media
+  GOOGLE_CLOUD_STORAGE_ENDPOINT: http://localhost:4443
+  SENDGRID_API_KEY: some_key
+  SENDGRID_API_URL: http://localhost:3000/v3/mail/send
+  NO_REPLY_EMAIL: no-reply@domain.com
+  EMAIL_CODE_TIME_TO_LIVE: 10
+  SENTRY_PROJECT_LINK: dummy_link
+  PAYPAL_CLIENT_ID: dummy_id
+  PAYPAL_CLIENT_KEY: dummy_key
+  PAYPAL_WEBHOOK_ID: dummy_id
+
 jobs:
   api-test:
     runs-on: [ubuntu-latest]
+     services:
+      surrealdb:
+        image: surrealdb/surrealdb:latest
+        container_name: surrealdb
+        ports:
+          - "8000:8000"
+        command: start --user ${{ env.DB_USERNAME }} --pass ${{ env.DB_PASSWORD }} --log trace --bind 0.0.0.0:8000 rocksdb:///data/database
+        environment:
+          - SURREAL_USER=${{ env.DB_USERNAME }}
+          - SURREAL_PASS=${{ env.DB_PASSWORD }}
+
     steps:
       - uses: actions/checkout@v4
       - run: mv .env.test .env
       - uses: actions-rust-lang/setup-rust-toolchain@v1
-      - run: curl -sSL https://just.systems/install.sh | bash -s -- --to /usr/local/bin
-      - run: just test
+      - run: cargo test
