--- a/.github/workflows/api-tests.yml
+++ b/.github/workflows/api-tests.yml
@@ -43,7 +43,13 @@ jobs:
         env:
           SURREAL_USER: test
           SURREAL_PASS: test
-        options: --entrypoint "surreal start --user test --pass test --log trace --bind 0.0.0.0:8000 rocksdb:///data/database"
+        entrypoint: surreal
+        command: >
+          start
+          --user test
+          --pass test
+          --bind 0.0.0.0:8000
+          rocksdb:///data/database
 
     steps:
       - uses: actions/checkout@v4
