fix: simplify surrealdb service command by removing unnecessary entrypoint

--- a/.github/workflows/api-tests.yml
+++ b/.github/workflows/api-tests.yml
@@ -43,13 +43,7 @@ jobs:
         env:
           SURREAL_USER: test
           SURREAL_PASS: test
-        entrypoint: surreal
-        command: >
-          start
-          --user test
-          --pass test
-          --bind 0.0.0.0:8000
-          rocksdb:///data/database
+        command: surreal start  --user test --pass test --bind 0.0.0.0:8000 rocksdb:///data/database
 
     steps:
       - uses: actions/checkout@v4
