--- a/.github/workflows/api-tests.yml
+++ b/.github/workflows/api-tests.yml
@@ -21,6 +21,9 @@ jobs:
       UPLOAD_MAX_SIZE_MB: 15
       DB_NAMESPACE: test
       DB_DATABASE: test
+      DB_USERNAME: ${{ secrets.DB_USERNAME }}
+      DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+      DB_URL: ${{ secrets.DB_URL }}
       GOOGLE_CLOUD_STORAGE_BUCKET: media
       GOOGLE_CLOUD_STORAGE_ENDPOINT: http://localhost:4443
       SENDGRID_API_KEY: some_key
