use vars in api-tests.yml

--- a/.github/workflows/api-tests.yml
+++ b/.github/workflows/api-tests.yml
@@ -19,11 +19,11 @@ jobs:
       GOOGLE_ANDROID_CLIENT_ID: dummy_id
       GOOGLE_IOS_CLIENT_ID: dummy_id
       UPLOAD_MAX_SIZE_MB: 15
-      DB_NAMESPACE: ${{ secrets.DB_NAMESPACE }}
+      DB_NAMESPACE: ${{ vars.DB_NAMESPACE }}
       DB_DATABASE: test
-      DB_USERNAME: ${{ secrets.DB_USERNAME }}
+      DB_USERNAME: ${{ vars.DB_USERNAME }}
       DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
-      DB_URL: ${{ secrets.DB_URL }}
+      DB_URL: ${{ vars.DB_URL }}
       GOOGLE_CLOUD_STORAGE_BUCKET: media
       GOOGLE_CLOUD_STORAGE_ENDPOINT: http://localhost:4443
       SENDGRID_API_KEY: some_key
