--- a/.github/workflows/api-tests.yml
+++ b/.github/workflows/api-tests.yml
@@ -8,35 +8,9 @@ jobs:
   api-test:
     runs-on: ubuntu-latest
 
-    env:
-      START_PASSWORD: 12334
-      DEVELOPMENT: true
-      STRIPE_SECRET_KEY: dummy_id
-      STRIPE_PLATFORM_ACCOUNT: dummy_id
-      STRIPE_WEBHOOK_SECRET: dummy_id
-      JWT_SECRET: some123
-      APPLE_MOBILE_CLIENT_ID: some_app
-      GOOGLE_ANDROID_CLIENT_ID: dummy_id
-      GOOGLE_IOS_CLIENT_ID: dummy_id
-      UPLOAD_MAX_SIZE_MB: 15
-      DB_NAMESPACE: ${{ vars.DB_NAMESPACE }}
-      DB_DATABASE: test
-      DB_USERNAME: ${{ vars.DB_USERNAME }}
-      DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
-      DB_URL: ${{ vars.DB_URL }}
-      GOOGLE_CLOUD_STORAGE_BUCKET: media
-      GOOGLE_CLOUD_STORAGE_ENDPOINT: http://localhost:4443
-      SENDGRID_API_KEY: some_key
-      SENDGRID_API_URL: http://localhost:3000/v3/mail/send
-      NO_REPLY_EMAIL: no-reply@domain.com
-      EMAIL_CODE_TIME_TO_LIVE: 10
-      SENTRY_PROJECT_LINK: dummy_link
-      PAYPAL_CLIENT_ID: dummy_id
-      PAYPAL_CLIENT_KEY: dummy_key
-      PAYPAL_WEBHOOK_ID: dummy_id
-
     steps:
       - uses: actions/checkout@v4
+      - run: mv .env.test .env
       - uses: actions-rust-lang/setup-rust-toolchain@v1
-      - run: sleep 5
-      - run: cargo test
+      - run: curl -sSL https://just.systems/install.sh | bash -s -- --to /usr/local/bin
+      - run: just test
