feat: Implement discussions and follows routes with associated services
- Added discussions routes including create, update, delete, and SSE for real-time updates.
- Implemented user authorization checks for discussions and tasks.
- Created follows routes to manage user following and followers, including notifications on follow actions.
- Integrated Swagger UI for API documentation with OpenAPI specification.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,7 +42,7 @@ async-stripe = { version = "0.41.0", features = [
 google-cloud-storage = "0.24.0"
 async-trait = "0.1.88"
 dotenvy = "0.15.7"
-axum-extra = { version = "0.9", features = ["cookie"] }
+axum-extra = { version = "0.9", features = ["cookie", "typed-header"] }
 sentry = { version = "0.39.0", default-features = false, features = [
     "curl",
     "backtrace",
