add tests for user otp

--- a/.env.test
+++ b/.env.test
@@ -21,3 +21,4 @@ SENTRY_PROJECT_LINK=dummy_link
 PAYPAL_CLIENT_ID=dummy_id
 PAYPAL_CLIENT_KEY=dummy_key
 PAYPAL_WEBHOOK_ID=dummy_id
+TOTP_SECRET_KEY=OBWGC2LOFVZXI4TJNZTS243FMNZGK5BNGEZDG
