--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,6 +50,7 @@ sentry = { version = "0.39.0", default-features = false, features = [
     "panic",
 ] }
 argon2 = "0.5.3"
+totp-rs = { version = "5.7.0", features = ["gen_secret", "otpauth"] }
 
 [dev-dependencies]
 fake = { version = "4.3.0", features = ["chrono"] }
