--- a/.github/workflows/api-tests.yml
+++ b/.github/workflows/api-tests.yml
@@ -11,5 +11,4 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: actions-rust-lang/setup-rust-toolchain@v1
-      - run: curl -sSL https://just.systems/install.sh | bash -s -- --to /usr/local/bin
-      - run: just test
+      - run: cargo test
