--- a/.github/workflows/api-tests.yml
+++ b/.github/workflows/api-tests.yml
@@ -10,7 +10,5 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-      - run: mv .env.test .env
       - uses: actions-rust-lang/setup-rust-toolchain@v1
-      - run: curl -sSL https://just.systems/install.sh | bash -s -- --to /usr/local/bin
-      - run: just test
+      - run: cargo test
