--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,6 +51,7 @@ sentry = { version = "0.39.0", default-features = false, features = [
 ] }
 argon2 = "0.5.3"
 totp-rs = { version = "5.7.0", features = ["gen_secret", "otpauth"] }
+dashmap = "6.1.0"
 
 [dev-dependencies]
 fake = { version = "4.3.0", features = ["chrono"] }
