update .env.example with SUPPORT_EMAIL

--- a/.env.example
+++ b/.env.example
@@ -23,3 +23,4 @@ SENTRY_PROJECT_LINK=some_link
 PAYPAL_CLIENT_ID=paypal_client_id
 PAYPAL_CLIENT_KEY=paypal_client_key
 PAYPAL_WEBHOOK_ID=paypal_webhook_id
+SUPPORT_EMAIL="darve support email"
