--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,36 +4,35 @@ version = "0.1.16"
 edition = "2021"
 
 [dependencies]
-axum = { version = "0.7.7", features = ["multipart", "http2"] }
+axum = { version = "0.8.4", features = ["multipart", "http2"] }
 jsonwebtoken = "9.3.0"
 serde = { version = "1.0.210", features = ["derive"] }
 serde_json = "1.0.128"
 tokio = { version = "1.40.0", features = ["full"] }
-uuid = { version = "1.10.0", features = ["v4"] }
+uuid = { version = "1.18.1", features = ["v4"] }
 once_cell = "1.19.0"
-tower-cookies = "0.10.0"
+tower-cookies = "0.11.0"
 chrono = { version = "0.4.38", features = ["serde"] }
 tower-http = { version = "0.6.1", features = ["fs", "trace"] }
-tower-sessions = "0.13.0"
-tower = { version = "0.5.1" }
+tower-sessions = "0.14.0"
+tower = { version = "0.5.2" }
 webauthn-rs = { version = "0.5.0", features = [
     "danger-allow-state-serialisation",
 ] }
 base64 = "0.22.1"
-axum-test = "16.1.0"
 askama_axum = { git = "https://github.com/djc/askama.git", branch = "main" }
 askama = { git = "https://github.com/djc/askama.git", branch = "main" }
-axum-htmx = { version = "0.6.0", features = ["auto-vary"] }
+axum-htmx = { version = "0.8.1", features = ["auto-vary"] }
 validator = { version = "0.20.0", features = ["derive"] }
 regex = "1.10.6"
 futures = "0.3.30"
 tokio-stream = { version = "0.1.16", features = ["sync"] }
-strum = { version = "0.26.3", features = ["derive"] }
-rand = "0.8.5"
+strum = { version = "0.27.2", features = ["derive"] }
+rand = "0.9.2"
 reqwest = { version = "0.12.15", features = ["json"] }
 surrealdb = { version = "2.3.3", features = ["kv-mem"] }
 tokio-util = { version = "0.7.12", features = ["io", "futures-io"] }
-axum_typed_multipart = "0.13.0"
+axum_typed_multipart = "0.16.4"
 tempfile = "3.13.0"
 async-stripe = { version = "0.41.0", features = [
     "checkout",
@@ -42,8 +41,12 @@ async-stripe = { version = "0.41.0", features = [
 google-cloud-storage = "0.24.0"
 async-trait = "0.1.88"
 dotenvy = "0.15.7"
-axum-extra = { version = "0.9", features = ["cookie", "query", "typed-header"] }
-sentry = { version = "0.39.0", default-features = false, features = [
+axum-extra = { version = "0.10.1", features = [
+    "cookie",
+    "query",
+    "typed-header",
+] }
+sentry = { version = "0.43.0", default-features = false, features = [
     "curl",
     "backtrace",
     "contexts",
@@ -56,6 +59,7 @@ dashmap = "6.1.0"
 [dev-dependencies]
 fake = { version = "4.3.0", features = ["chrono"] }
 serial_test = "3.2.0"
+axum-test = "18.1.0"
 
 [profile.release]
 opt-level = 3
