create env for rate_limit

--- a/.env.example
+++ b/.env.example
@@ -24,3 +24,5 @@ PAYPAL_CLIENT_ID=paypal_client_id
 PAYPAL_CLIENT_KEY=paypal_client_key
 PAYPAL_WEBHOOK_ID=paypal_webhook_id
 SUPPORT_EMAIL="darve support email"
+RATE_LIMIT_RSP=rate_limit_per_seconds # optional- default is 100
+RATE_LIMIT_BURST=rate_limit_burst # optional- default is 200
