--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,7 +38,7 @@ async-stripe = { version = "0.41.0", features = [
     "checkout",
     "runtime-tokio-hyper",
 ] }
-google-cloud-storage = "0.24.0"
+gcloud-storage = "1.1.1"
 async-trait = "0.1.88"
 dotenvy = "0.15.7"
 axum-extra = { version = "0.10.1", features = [
