--- a/Cargo.toml
+++ b/Cargo.toml
@@ -57,6 +57,8 @@ totp-rs = { version = "5.7.0", features = ["gen_secret", "otpauth"] }
 dashmap = "6.1.0"
 tower_governor = "0.8.0"
 governor = "0.10.1"
+tracing = "0.1.41"
+tracing-subscriber = "0.3.20"
 
 [dev-dependencies]
 fake = { version = "4.3.0", features = ["chrono"] }
