feat: integrate Twitch authentication and user management

--- a/.env.example
+++ b/.env.example
@@ -24,3 +24,7 @@ PAYPAL_CLIENT_ID=paypal_client_id
 PAYPAL_CLIENT_KEY=paypal_client_key
 PAYPAL_WEBHOOK_ID=paypal_webhook_id
 SUPPORT_EMAIL="darve support email"
+TWITCH_CLIENT_ID=twitch_client_id
+TWITCH_CLIENT_SECRET=twitch_client_secret
+TWITCH_REDIRECT_URI=twitch_redirect_uri
+
