--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,8 @@ tokio-stream = { version = "0.1.16", features = ["sync"] }
 strum = { version = "0.27.2", features = ["derive"] }
 rand = "0.9.2"
 reqwest = { version = "0.12.15", features = ["json"] }
-surrealdb = { version = "2.3.3", features = ["kv-mem"] }
+surrealdb = { version = "3", features = ["kv-mem"] }
+surrealdb-types = "3"
 tokio-util = { version = "0.7.12", features = ["io", "futures-io"] }
 axum_typed_multipart = "0.16.4"
 tempfile = "3.13.0"
