--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ uuid = { version = "1.18.1", features = ["v4"] }
 once_cell = "1.19.0"
 tower-cookies = "0.11.0"
 chrono = { version = "0.4.38", features = ["serde"] }
-tower-http = { version = "0.6.1", features = ["fs", "trace"] }
+tower-http = { version = "0.6.1", features = ["fs", "trace", "cors"] }
 tower-sessions = "0.14.0"
 tower = { version = "0.5.2" }
 webauthn-rs = { version = "0.5.0", features = [
